FS interface improvements

--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -823,12 +823,6 @@ dl {
     clear: both;
   }
   dd {
-    .fund-status {
-      font-weight: 600;
-    }
-    .fund-status.fund-open {
-      color: #328c19;
-    }
   }
 }
 
@@ -1475,6 +1469,34 @@ body {
     .fa-ul.last {
       li:last-child {
         margin-bottom: 0;
+      }
+    }
+    .mdc-card__info--fund-title a {
+      .fund-status {
+        margin-left: 0;
+        margin-right: $unit/5;
+        display: inline-block;
+        padding: 0.22222rem $unit/2;
+        line-height: 1;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: baseline;
+        border-radius: $unit;
+        color: white;
+        position: relative;
+        top: -2px;
+        left: 0;
+        font-size: 1rem;
+        height: 1.5rem;
+        box-sizing: border-box;
+        font-weight: 600;
+        background-color: #8c1932;
+      }
+      .fund-status.fund-open {
+        background-color: #328c19;
+      }
+      .hover-underline {
+        margin-right: $unit/2;
       }
     }
     .mdc-card__info--fund-title a:hover {
