--- a/sites/configurations/fundingscotland/partials/fund/key-info.hbs
+++ b/sites/configurations/fundingscotland/partials/fund/key-info.hbs
@@ -11,6 +11,9 @@
     <h2 class="mdc-card__info--fund-title mdc-typography--headline5">
       <a href="/fund/{{slug}}{{@root.request.url.search}}">
         <span class="hover-underline">{{title}}</span>
+        {{#ifAll fund_status fund_status_slug ~}}
+          <span class="mdc-typography--caption fund-status fund-{{fund_status_slug}}">Status: {{{fund_status}}}</span>
+        {{/ifAll ~}}
       </a>
     </h2>
     <ul class="fa-ul funder">
@@ -22,12 +25,6 @@
     <div class="fund-details">
       <h4 class="mdc-typography--headline6">Fund details</h4>
       <dl>
-        {{#if fund_status ~}}
-          <dt>Status</dt>
-          <dd>
-            <span class="fund-status fund-{{fund_status_slug}}">{{{fund_status}}}</span>
-          </dd>
-        {{/if ~}}
         {{#if (length (arrayify type_of_funding)) ~}}
           <dt>Type of funding</dt>
           <dd>
