--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -477,8 +477,8 @@ footer h3,
       color: white;
       width: 100%;
       color: white;
-      line-height: $unit*3;
-      height: $unit*3;
+      line-height: 56px;
+      height: 56px;
       .fa-2x {
         position: absolute;
         top: .6rem;
@@ -540,6 +540,8 @@ footer h3,
   display: flex;
   min-height: 50vh;
   width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .provider-google.mdc-chip--selected,
