--- a/sites/configurations/fundingscotland/partials/account/sign-in.hbs
+++ b/sites/configurations/fundingscotland/partials/account/sign-in.hbs
@@ -60,6 +60,7 @@
               <div id="form-section-sign-in-buttons">
                 <button class="mdc-button mdc-button--raised" type="submit" id="sign-in-submit">
                   Sign in
+                  <span class="far fa-sign-in-alt" aria-hidden="true"></span>
                 </button>
               </div>
             </div>
