--- a/sites/configurations/fundingscotland/partials/account/redirect-home.hbs
+++ b/sites/configurations/fundingscotland/partials/account/redirect-home.hbs
@@ -5,6 +5,7 @@
       fundingscotland.app.auth().signOut().then(function() {
         window.location.href = '/';
         fundingscotland.setCookie('fs_token');
+        fundingscotland.setCookie('fs_cookie');
       }).catch(function(err) {
         console.error('Error logging out:', err);
       });
