--- a/sites/configurations/fundingscotland/templates/pages/home.hbs
+++ b/sites/configurations/fundingscotland/templates/pages/home.hbs
@@ -3,20 +3,20 @@
   <div class="mdc-layout-grid home-funds">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full latest-funds">
-        <p>
-          Funding Scotland exists to help charities, community groups and social enterprises find the money they need to realise their vision. From small grants to funding for big capital projects, we can help you track down the funding you need. We provide information on over 1200 funds which support Scottish projects. Funding Scotland only lists funders with a track record of supporting projects in Scotland. It includes grants, loans, prizes and other support. It does not include funding opportunities for individuals or private businesses. This website is owned and maintained by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>, champions of the third sector in Scotland.
-        </p>
-        <h2 class="mdc-typography--headline4">Blogs/advice</h2>
+        <h1 class="mdc-typography--headline3">
+          Search Funding Scotland for grants, loans and support for your organisation
+        </h1>
+        <h2 class="mdc-typography--headline5">Blogs/advice</h2>
         <ul>
           <li>&hellip;</li>
           <li>&hellip;</li>
           <li>&hellip;</li>
         </ul>
-        <h2 class="mdc-typography--headline4">Go premium</h2>
+        <h2 class="mdc-typography--headline5">Go premium</h2>
         <p>
           To start searching for funds, <a href="/">sign in</a>. For features such as email alerts, adding notes to your funds, and more, <a href="/premium">go premium</a>.
         </p>
-        <h2 class="mdc-typography--headline4">Go local</h2>
+        <h2 class="mdc-typography--headline5">Go local</h2>
         <p>
         For information on funding in your area, check out:
         </p>
@@ -31,7 +31,7 @@
           Recently updated funds
         </div>
         {{#each data.primaryResponse.hits.hits ~}}
-        {{> fund_mini _source}}
+          {{> fund_mini _source}}
         {{/each ~}}
       </div>
     </div>
