--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -65,6 +65,7 @@ h4 {
   margin-bottom: $unit/2;
   font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
   font-weight: $heading-font-weight;
+  letter-spacing: -0.03rem;
   strong {
     font-weight: $heading-font-weight;
   }
@@ -349,6 +350,7 @@ footer h3,
 .supplimentary-list-title {
   font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
   font-weight: $heading-font-weight;
+  letter-spacing: -0.03rem;
 }
 .mdc-drawer__content-heading,
 .mdc-typography--headline,
