--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1356,6 +1356,10 @@ a {
     }
     .save-button-block {
       margin: $unit;
+      .mdc-typography--caption {
+        color: #2c3e50;
+        margin-top: $unit/2;
+      }
     }
   }
 }
@@ -1408,10 +1412,10 @@ hr {
   padding: $unit;
 }
 .mdc-drawer__content-heading {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   display: block;
   margin: 0;
-  padding: $unit 0 $unit $unit/2;
+  padding: $unit*1.5 0 0 $unit/2;
   font-weight: $heading-medium-font-weight;
   .mdc-icon-toggle {
     margin-top: -$unit*(3/4);
@@ -1837,6 +1841,7 @@ body {
   .mdc-text-field {
     z-index: 4;
     overflow: visible;
+    margin-bottom: 0;
   }
   .mdc-text-field--box::before,
   .mdc-text-field--box::after {
