--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -145,7 +145,7 @@ header {
       height: $header-lower-height;
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 220px, $mdc-theme-primary-light 221px, $mdc-theme-primary);
+      background-image: linear-gradient(60deg, $mdc-theme-primary-dark, $mdc-theme-primary-dark 220px, $mdc-theme-primary 221px, $mdc-theme-primary);
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-end {
       background-color: $mdc-theme-primary;
@@ -1211,10 +1211,10 @@ hr {
   padding: $unit;
 }
 .mdc-drawer__content-heading {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   display: block;
   margin: 0;
-  padding: $unit 0 $unit $unit/2;
+  padding: $unit*1.5 0 0 $unit/2;
   font-weight: $heading-medium-font-weight;
   .mdc-icon-toggle {
     margin-top: -$unit*(3/4);
