--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -385,6 +385,9 @@ footer h3,
   box-sizing: border-box;
   position: relative;
   z-index: 4;
+  .mdc-button--fullwidth {
+    margin-top: $unit;
+  }
 }
 .mdc-tab .mdc-tab--label,
 .mdc-button {
