--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -385,6 +385,11 @@ footer h3,
   box-sizing: border-box;
   position: relative;
   z-index: 4;
+  .mdc-typography--headline7 {
+    font-size: 1rem;
+    padding: $unit/2;
+    margin: $unit/2 0 0;
+  }
   .mdc-button--fullwidth {
     margin-top: $unit;
   }
@@ -720,7 +725,7 @@ a:hover {
   padding: 0;
   margin-bottom: 0;
   .mdc-chip {
-    margin: 0 $unit/2 $unit/4 0;
+    margin: $unit/2 $unit/2 0 0;
   }
 }
 .mdc-chip {
@@ -1430,6 +1435,9 @@ hr {
     margin-left: $unit;
   }
 }
+h2.mdc-drawer__content-heading {
+  padding: $unit 0 $unit $unit/2;
+}
 a.mdc-drawer__content-heading {
   color: rgba(0, 0, 0, 0.87);
 }
@@ -1834,10 +1842,10 @@ body {
     margin-top: $unit*1.5;
     margin-left: $unit;
   }
-  .mdc-typography--headline7 {
-    margin: 0;
-    padding: 11px;
-  }
+  // .mdc-typography--headline7 {
+  //   margin: 0;
+  //   padding: 11px;
+  // }
   .mdc-layout-grid__inner {
     grid-gap: $unit/2;
   }
@@ -2025,7 +2033,7 @@ footer,
       .search-form {
         background-color: rgba(255, 255, 255, 0.75);
         width: 100%;
-        padding: $unit $unit $unit/2;
+        padding: $unit;
         box-sizing: border-box;
         .mdc-text-field,
         .mdc-select,
