Added some ARIA labels for browse

--- a/sites/configurations/fundingscotland/templates/funds/browse.hbs
+++ b/sites/configurations/fundingscotland/templates/funds/browse.hbs
@@ -15,7 +15,7 @@
                     {{{key}}}
                   {{/with ~}}
                 </span>
-                <span class="mdc-list-item__meta">
+                <span class="mdc-list-item__meta" aria-label="{{doc_count}} funds">
                   {{doc_count}}
                 </span>
               </a>
