--- a/sites/configurations/goodmoves/partials/browse.hbs
+++ b/sites/configurations/goodmoves/partials/browse.hbs
@@ -13,7 +13,7 @@
                   {{{key}}}
                 {{/with ~}}
               </span>
-              <span class="mdc-list-item__meta">
+              <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">
                 {{doc_count}}
               </span>
             </a>
@@ -34,7 +34,7 @@
                   {{{key}}}
                 {{/with ~}}
               </span>
-              <span class="mdc-list-item__meta">
+              <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">
                 {{doc_count}}
               </span>
             </a>
@@ -55,7 +55,7 @@
                   {{{key}}}
                 {{/with ~}}
               </span>
-              <span class="mdc-list-item__meta">
+              <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">
                 {{doc_count}}
               </span>
             </a>
@@ -83,7 +83,7 @@
                     {{{key}}}
                   {{/with ~}}
                 </span>
-                <span class="mdc-list-item__meta">
+                <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">
                   {{doc_count}}
                 </span>
               </a>
