--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
@@ -3,7 +3,7 @@
   <span class="mdc-list-item__text">
     <a href="/jobs/community-jobs-scotland/vacancies/{{@root.request.params.phase}}?sector={{slug}}">{{title.key}}</a>
   </span>
-  <span class="mdc-list-item__meta">{{doc_count}}</span>
+  <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">{{doc_count}}</span>
 </li>
 {{/inline}}
 {{#*inline "region"}}
@@ -12,7 +12,7 @@
     <a href="/jobs/community-jobs-scotland/vacancies/{{@root.request.params.phase}}?region={{slug}}">{{title.key}}</a>
   </span>
   <span class="mdc-list-item__meta">
-    <span class="mdc-list-item__meta">{{doc_count}}</span>
+    <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">{{doc_count}}</span>
   </span>
 </li>
 {{/inline}}
