--- a/sites/configurations/scvo/partials/breadcrumbs.hbs
+++ b/sites/configurations/scvo/partials/breadcrumbs.hbs
@@ -1,5 +1,5 @@
 {{#with @root.data.primaryResponse.hits.hits.[0]._source ~}}
-<ul class="breadcrumbs breadcrumbs-length-{{breadcrumb.length}}">
+<ul class="breadcrumbs breadcrumbs-length-{{breadcrumb.length}}" aria-hidden="true">
   <li><a href="/">Home</a></li>
   {{#each breadcrumb ~}}
   <li><a href="{{replace (replace url 'http://cms.scvo.org' '') 'https://cms.scvo.org' ''}}">{{{striptags title}}}</a></li>
