--- a/sites/configurations/fundingscotland/partials/fund-search-header.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-header.hbs
@@ -41,7 +41,19 @@
         </div>
       </form>
     {{else}}
+      <h1 class="mdc-typography--headline3">
+        Search <strong>Funding Scotland</strong> for grants, loans, and support for your organisation
+      </h1>
       {{> account_sign_in}}
+      <div class="mdc-typography--body1 v-margin-full">
+        Forgot your password? <a href="/reset-password">Reset password</a>
+      </div>
+      <div class="mdc-typography--body1 v-margin-full">
+        Don't have an account? <a href="/sign-up">Sign up</a>
+      </div>
+      <div class="mdc-typography--body1 v-margin-full">
+        Read our <a href="/privacy" target="_blank">privacy notice</a>
+      </div>
     {{/if ~}}
   </div>
 </div>
