--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1766,7 +1766,7 @@ body {
   .mdc-card__media--organisation {
     display: flex;
     align-items: flex-start;
-    margin: $unit/2 0 $unit/2 $unit/2;
+    margin: $unit/2 0 0 $unit/2;
     padding: 0;
     overflow: hidden;
     img {
