--- a/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -2,7 +2,7 @@
 <div class="mdc-card__info--vacancy-row">
   <div class="mdc-card__info--vacancy">
     {{#if organisation.has_logo ~}}
-    <div class="mdc-card__media mdc-card__media--organisation pull-right hide-sm">
+    <div class="mdc-card__media mdc-card__media--organisation pull-right">
       <a href="/organisation/{{organisation.slug}}{{@root.request.url.search}}">
         <img src="{{organisation.logo_url}}" alt="{{organisation.name}}" />
       </a>
