--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -58,6 +58,7 @@
                 <div class="mdc-form-field">
                   <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
                     <select data-location="where-jobs" class="mdc-select__native-control" name="distance" id="distance-jobs">
+                      <option value="8.04672">within 5 miles</option>
                       <option value="16.09344" selected>within 10 miles</option>
                       <option value="40.2336">within 25 miles</option>
                       <option value="80.4672">within 50 miles</option>
