--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -67,6 +67,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <div class="mdc-select mdc-select--box mdc-drawer--occasional-ie11" data-mdc-auto-init="MDCSelect">
               <select data-location="{{instance_id}}-location" class="mdc-select__native-control search-distance" id="{{instance_id}}-distance" name="distance">
+                <option value="8.04672"{{#compare @root.request.params.query.distance "8.04672"}} selected{{/compare}}>5 miles</option>
                 <option value="16.09344"{{#compare @root.request.params.query.distance "16.09344"}} selected{{/compare}}>10 miles</option>
                 <option value="40.2336"{{#compare @root.request.params.query.distance "40.2336"}} selected{{/compare}}>25 miles</option>
                 <option value="80.4672"{{#compare @root.request.params.query.distance "80.4672"}} selected{{/compare}}>50 miles</option>
@@ -128,22 +129,24 @@
       </h3>
       <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
         {{#compare this "===" "regions" ~}}
-          {{#each @root.data.supplimentaryResponses.types.aggregations.countries.buckets ~}}
-            {{#if key ~}}
-              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">" 1 ~}}
-                <h3 class="mdc-typography--headline7">{{{key}}}</h3>
-              {{/compare ~}}
-            {{/if ~}}
-            {{#each this.regions_slugs.buckets ~}}
-              {{#if key ~}}
-                {{> term_checkbox slug=key field="regions" selected=@root.request.params.query.regions instance_id=../../../instance_id value=(lookup ../this.regions.buckets @index)}}
-              {{/if ~}}
-            {{/each ~}}
-          {{/each ~}}
           {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">" 1 ~}}
-            <h3 class="mdc-typography--headline7">Other</h3>
+            {{#each @root.data.supplimentaryResponses.types.aggregations.countries.buckets ~}}
+              {{#if key ~}}
+                {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">" 1 ~}}
+                  <h3 class="mdc-typography--headline7">{{{key}}}</h3>
+                {{/compare ~}}
+              {{/if ~}}
+              {{#each this.regions_slugs.buckets ~}}
+                {{#if key ~}}
+                  {{> term_checkbox slug=key field="regions" selected=@root.request.params.query.regions instance_id=../../../instance_id value=(lookup ../this.regions.buckets @index)}}
+                {{/if ~}}
+              {{/each ~}}
+            {{/each ~}}
+            {{#compare (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) ">" 1 ~}}
+              <h3 class="mdc-typography--headline7">Other</h3>
+              {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
+            {{/compare ~}}
           {{/compare ~}}
-          {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
         {{else}}
           {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
             {{#if key ~}}
