Location search improvement

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2081,6 +2081,7 @@ footer,
       .mdc-button--search {
         border-radius: 2px;
         width: 100%;
+        font-size: 1.2rem;
         .fa-search {
           position: absolute;
           right: $unit*(2/3);
