--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1606,6 +1606,7 @@ body.shortlist {
   position: relative;
   max-width: 1200px;
   align-items: flex-end;
+  z-index: 1;
   .mdc-tab-bar {
     width: 100%;
   }
