--- a/sites/configurations/goodmoves/templates/vacancies/notes.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/notes.hbs
@@ -30,7 +30,7 @@
   {{#compare @root.data.notes_vacancies.open.hits.total "===" 0}}
     {{#compare @root.data.notes_vacancies.closed.hits.total "===" 0}}
       <p class="mdc-typography--body1">
-        You haven't yet written notes on any jobs. To write a note, navigate to the full details of a job then enter the&ensp;<strong><span class="far fa-edit mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>Notes</strong>&ensp;tab, type some text then click the&ensp;<strong><span class="far fa-save mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>Save notes</strong>&ensp;button.
+        You haven't yet written notes on any jobs. To write a note, navigate to the full details of a job then enter the&ensp;<strong><span class="far fa-edit mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>Notes</strong>&ensp;tab, type out some text, then click the&ensp;<strong><span class="far fa-save mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>Save notes</strong>&ensp;button.
       </p>
     {{else}}
       <p class="mdc-typography--body1">
