--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -597,7 +597,7 @@ footer h3,
     }
     .mdc-list-item--header {
       height: auto;
-      padding: 0;
+      padding: 0 $unit;
     }
     .mdc-layout-grid {
       width: 100%;
