Improved both ajax forms and buttons, allowing for callbacks, improved delete notes

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -3102,6 +3102,21 @@ form.inline-form {
   text-decoration: underline;
   cursor: pointer;
 }
+
+.mdc-button--warning {
+  background-color: transparent !important;
+  color: $mdc-theme-error !important;
+}
+
+.mdc-button--raised.mdc-button--warning {
+  background-color: $mdc-theme-error !important;
+  color: #fff !important;
+}
+
+.mdc-button--warning:disabled {
+  opacity: 0.8;
+}
+
 /*
 body.map {
 header#top-bar, footer.mdc-layout__footer {
