Fixed one bug with your searches but introduced a possible other

--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -244,4 +244,5 @@
     console.log('notesSaved Arguments:', arguments);
     $('#delete-notes-' + data.id).prop('disabled', false);
   }
+  window.vacancyId = '{{Id}}';
 </script>
