--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -169,7 +169,7 @@
       </div>
     {{/if}}
 
-    {{#compare @root.data.primaryResponse.hits.total ">" 0}}
+    {{#compare @root.data.primaryResponse.home_latest.hits.total ">" 0}}
     <div class="mdc-layout-grid home-heading">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
@@ -200,7 +200,7 @@
           <span class="fal fa-fw fa-angle-right scroll-icon"></span>
         </div>
         <div class="mdc-layout-grid__inner scrolling-grid">
-          {{#each @root.data.primaryResponse.hits.hits ~}}
+          {{#each @root.data.primaryResponse.home_latest.hits.hits ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
             {{> vacancy_mini _source}}
           </div>
@@ -219,6 +219,40 @@
     </div>
     {{/compare}}
 
+    {{#if @root.data.auth.email}}
+    {{#compare @root.data.primaryResponse.recently_viewed.hits.total ">" 0}}
+    <div class="mdc-layout-grid home-heading">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+          <div class="mdc-typography--headline5">
+            Recently viewed&ensp;
+            <span class="mdc-typography--body1">
+              <a href="/search?sort=newest&page=2">Find more</a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="home-jobs">
+      <div class="mdc-layout-grid equal-height home-latest">
+        <div class="scroll-button scroll-left">
+          <span class="fal fa-fw fa-angle-left scroll-icon"></span>
+        </div>
+        <div class="scroll-button scroll-right">
+          <span class="fal fa-fw fa-angle-right scroll-icon"></span>
+        </div>
+        <div class="mdc-layout-grid__inner scrolling-grid">
+          {{#each @root.data.primaryResponse.recently_viewed.hits.hits ~}}
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
+            {{> vacancy_mini _source}}
+          </div>
+          {{/each ~}}
+        </div>
+      </div>
+    </div>
+    {{/compare}}
+    {{/if}}
+    
     {{#compare @root.data.supplimentaryResponses.top.hits.total ">" 0}}
     <div class="mdc-layout-grid home-heading">
       <div class="mdc-layout-grid__inner">
