--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -226,9 +226,9 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           <div class="mdc-typography--headline5">
             Recently viewed&ensp;
-            <span class="mdc-typography--body1">
+            <!-- <span class="mdc-typography--body1">
               <a href="/search?sort=newest&page=2">Find more</a>
-            </span>
+            </span> -->
           </div>
         </div>
       </div>
@@ -252,7 +252,7 @@
     </div>
     {{/compare}}
     {{/if}}
-    
+
     {{#compare @root.data.supplimentaryResponses.top.hits.total ">" 0}}
     <div class="mdc-layout-grid home-heading">
       <div class="mdc-layout-grid__inner">
