Show all latest jobs if your saved searches don't return any

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -556,10 +556,9 @@ footer h3,
 }
 .settings {
   float: right;
-  .mdc-typography--body1 {
+  .settings-heading {
     position: relative;
     display: inline;
-    top: $unit/10;
     margin-right: $unit/2;
   }
   .mdc-form-field {
