--- a/sites/configurations/goodmoves/templates/vacancies/home.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/home.hbs
@@ -173,7 +173,7 @@
     <div class="mdc-layout-grid home-heading">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          {{#ifAll @root.data.auth @root.data.searches.items.[0].[0] ~}}
+          {{#compare @root.data.primaryResponse.home_latest_personalised.hits.total ">" 0}}
           <h2 class="mdc-typography--headline5">
             Your latest jobs&ensp;
             <span class="mdc-typography--body1">
@@ -187,7 +187,7 @@
               <a href="/search?sort=newest&page=2">Find more</a>
             </span>
           </div>
-          {{/ifAll ~}}
+          {{/compare}}
         </div>
       </div>
     </div>
@@ -200,18 +200,26 @@
           <span class="fal fa-fw fa-angle-right scroll-icon"></span>
         </div>
         <div class="mdc-layout-grid__inner scrolling-grid">
+          {{#compare @root.data.primaryResponse.home_latest_personalised.hits.total ">" 0}}
+          {{#each @root.data.primaryResponse.home_latest_personalised.hits.hits ~}}
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs latest-jobs-personalised">
+            {{> vacancy_mini _source}}
+          </div>
+          {{/each ~}}
+          {{else}}
           {{#each @root.data.primaryResponse.home_latest.hits.hits ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
             {{> vacancy_mini _source}}
           </div>
           {{/each ~}}
+          {{/compare ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs last-card">
             <div class="mdc-card align-centre mdc-typography--body1">
-              {{#ifAll @root.data.auth @root.data.searches.items.[0].[0] ~}}
+              {{#compare @root.data.primaryResponse.home_latest_personalised.hits.total ">" 0}}
               <a href="/search?sort=newest">All latest jobs</a>
               {{else}}
               <a href="/search?sort=newest&page=2">Find more jobs</a>
-              {{/ifAll ~}}
+              {{/compare ~}}
             </div>
           </div>
         </div>
