--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -1,7 +1,7 @@
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
   {{#compare (length @root.data.searches.items.[0]) ">" 0 ~}}
-  <div class="settings">
-    <span class="mdc-typography--body1">Email frequency</span>
+  <div class="settings mdc-typography--body1">
+    <span class="settings-heading">Email frequency</span>
     {{> email_frequency}}
   </div>
   {{/compare}}
