--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -560,6 +560,7 @@ footer h3,
     position: relative;
     display: inline;
     margin-right: $unit/2;
+    font-weight: 600;
   }
   .mdc-form-field {
     .mdc-radio {
