--- a/sites/configurations/goodmoves/partials/email-frequency.hbs
+++ b/sites/configurations/goodmoves/partials/email-frequency.hbs
@@ -1,9 +1,9 @@
-{{#if @root.data.auth}}
-  {{#if (length (filter @root.data.searches.items.[0] "partitionActive" "===" 1))}}
-    {{#with @root.data.searches.items.[0].[0]}}
+{{#if @root.data.auth ~}}
+  {{#if (length (filter @root.data.searches.items.[0] "partitionActive" "===" 1)) ~}}
+    {{#with @root.data.searches.items.[0].[0] ~}}
       <div class="mdc-form-field">
         <div class="mdc-radio">
-          <input class="mdc-radio__native-control" type="radio" id="daily" name="frequency" {{#compare days "1234567"}}checked{{/compare}}>
+          <input class="mdc-radio__native-control" type="radio" id="daily" name="frequency"{{#compare days "1234567"}} checked{{/compare}}>
           <div class="mdc-radio__background">
             <div class="mdc-radio__outer-circle"></div>
             <div class="mdc-radio__inner-circle"></div>
@@ -13,7 +13,7 @@
       </div>
       <div class="mdc-form-field">
         <div class="mdc-radio">
-          <input class="mdc-radio__native-control" type="radio" id="weekly" name="frequency" {{#compare (length days) 1}}checked{{/compare}}>
+          <input class="mdc-radio__native-control" type="radio" id="weekly" name="frequency"{{#compare (length days) 1}} checked{{/compare}}>
           <div class="mdc-radio__background">
             <div class="mdc-radio__outer-circle"></div>
             <div class="mdc-radio__inner-circle"></div>
@@ -23,11 +23,11 @@
       </div>
     {{else}}
       You have no saved searches.
-    {{/with}}
+    {{/with ~}}
   {{else}}
     You are not subscribed to any saved searches.
-  {{/if}}
-{{/if}}
+  {{/if ~}}
+{{/if ~}}
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
