--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2540,6 +2540,9 @@ footer.mdc-layout__footer {
     }
   }
 }
+@media screen and (max-width: 1739px) {
+
+}
 @media screen and (min-width: $desktop-landscape-breakpoint + 1) {
   .home-banner .banner-search.overlay .content {
     background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 34%, transparent 34.08%, transparent);
