--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2026,7 +2026,7 @@ footer,
 .home-banner {
   .banner-search {
     background-size: cover;
-    background-position: center bottom;
+    background-position: center center;
     background-repeat: no-repeat;
     min-height: 40vh;
     .page-content {
