header text sizing

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2540,15 +2540,17 @@ footer.mdc-layout__footer {
     }
   }
 }
-@media screen and (max-width: 1739px) {
-
+@media screen and (max-width: 1710px) {
+  .home-banner .banner-search.overlay .content .overlay-content {
+    padding-left: $unit;
+  }
 }
-@media screen and (min-width: $desktop-landscape-breakpoint + 1) {
+@media screen and (min-width: 1601px) {
   .home-banner .banner-search.overlay .content {
     background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 34%, transparent 34.08%, transparent);
   }
 }
-@media screen and (min-width: $mobile-landscape-breakpoint + 1) and (max-width: $desktop-landscape-breakpoint) {
+@media screen and (min-width: $mobile-landscape-breakpoint + 1) and (max-width: 1600px) {
   .home-banner .banner-search.overlay .content {
     background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 55%, transparent 55.08%, transparent);
   }
