Added user data export

--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -128,10 +128,10 @@
           <h3 class="mdc-typography--headline6">
             Account data
           </h3>
-          <button class="mdc-button mdc-button--raised mdc-button--export mdc-button--fullwidth v-margin" data-dialog-target="#export-user-dialog">
+          <a href="/export-user-data" class="mdc-button mdc-button--raised mdc-button--export mdc-button--fullwidth v-margin">
             <span class="far fa-upload mdc-list-item__graphic" aria-hidden="true"></span>
             Export account settings
-          </button>
+          </a>
           <button class="mdc-button mdc-button--raised mdc-button--import mdc-button--fullwidth v-margin" data-dialog-target="#import-user-dialog">
             <span class="far fa-download mdc-list-item__graphic" aria-hidden="true"></span>
             Import account settings
